--- a/AndroidTuts/tutorial/SimpleRoutingSolution/app/build.gradle
+++ b/AndroidTuts/tutorial/SimpleRoutingSolution/app/build.gradle
@@ -27,8 +27,10 @@ repositories {
 
 dependencies {
     implementation(name:'HERE-sdk', ext:'aar')
-    implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'org.locationtech.jts:jts-core:1.15.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 }
