--- a/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/AndroidManifest.xml
+++ b/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <application
         android:icon="@mipmap/ic_launcher"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:label="@string/app_name">
         <activity
             android:name=".RoutingActivity"
