--- a/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/AndroidManifest.xml
+++ b/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/AndroidManifest.xml
@@ -13,13 +13,17 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:label="@string/app_name">
         <activity
-            android:name=".RoutingActivity"
-            android:label="@string/app_name">
+            android:name=".LoginActivity"
+            android:label="@string/app_name"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".RoutingActivity">
         </activity>
 
         <meta-data
